fix(plc4j/profinet): Cleaned up and changed to using states for each device